--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "private": false,
   "scripts": {
     "build-ts": "rm -rf dist/ && tsc",
-    "debug": "DEBUG=email-templates node index.ts",
-    "start": "ts-node dist/index.js",
+    "debug": "DEBUG=email-templates yarn watch-node",
+    "start": "node dist/index.js",
     "watch-node": "nodemon"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "email-templates": "^7.0.5",
     "nodemon": "^2.0.4",
     "pug": "^3.0.0",
+    "sqs-consumer": "^5.4.0",
     "ts-node": "^8.10.2",
     "winston": "^3.3.0",
     "winston-cloudwatch": "^2.3.2"
